--- a/（1）/基础.md
+++ b/（1）/基础.md
@@ -1,6 +1,11 @@
 # 配置环境
+## IDEA快速创建SpringBoot
+new Project---Spring Initializr---Group/Artifact---选取响应的Dependencies(如web--web)---自动生成配置文件和相应的类
+## IDEA创建SSM项目（是否用模板）
+## IDEA创建包含多个子项目的文件
 
 # 写好Pom.xml文件
+## 导入常用的依赖jar包
 
 # 数据库如何连接
 
