--- a/（1）/基础.md
+++ b/（1）/基础.md
@@ -1,7 +1,25 @@
 # 配置环境
 ## IDEA快速创建SpringBoot
 new Project---Spring Initializr---Group/Artifact---选取响应的Dependencies(如web--web)---自动生成配置文件和相应的类
+new Project---Maven---Create from archetype---maven-archetype-quickstart
 ## IDEA创建SSM项目（是否用模板）
+### 两种模板的差异
+new Project---Maven---Create from archetype---maven-archetype-quickstart---GroupId/ArtifactId---pom.xml
+```java
+常用archetype
+一、maven-archetype-quickstart
+默认的Archetype,基本内容包括：
+一个包含junit依赖声明的pom.xml
+src/main/java主代码目录及一个名为App的类
+src/test/java测试代码目录及一个名为AppTest的测试用例
+
+二、maven-archetype-webapp
+一个最简单的Maven war项目模板，当需要快速创建一个Web应用的时候可以使用它。生成的项目内容包括：
+一个packaging为war且带有junit依赖声明的pom.xml
+src/main/webapp/目录
+src/main/webapp/index.jsp文件
+src/main/webapp/WEB-INF/web.xml文件
+```
 ## IDEA创建包含多个子项目的文件
 
 # 写好Pom.xml文件
