--- a/（1）/基础.md
+++ b/（1）/基础.md
@@ -20,7 +20,35 @@ src/main/webapp/index.jsp文件
 src/main/webapp/WEB-INF/web.xml文件
 ```
 ## IDEA创建包含多个子项目的文件
+new Project---Maven---GroupId/ArtifactId--完成---删掉自动生成的src目录；
 
+new Module---Maven---GroupId/ArtifactId--完成(此过程为在父Module下建立子Module)
+```java
+父Module的pom.xml文件写法（举例）
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
+    <groupId>com.imooc</groupId>
+    <artifactId>oa</artifactId>
+    <packaging>pom</packaging>
+    <version>1.0-SNAPSHOT</version>
+    
+    //父Module下的三个子Module(关键点）
+    <modules> 
+        <module>oa_dao</module>
+        <module>oa_biz</module>
+        <module>oa_web</module>
+    </modules>
+    
+    <properties>
+        <spring.version>4.0.2.RELEASE</spring.version>
+    </properties>
+</project>
+子类Module的pom.xml文件写法
+```
 # 写好Pom.xml文件
 ## 导入常用的依赖jar包
 
