--- a/（1）/基础.md
+++ b/（1）/基础.md
@@ -155,6 +155,40 @@ public class UserServiceImp implements UserService {
 	}
 }
 ```
+```java
+import java.util.List;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Controller;
+import org.springframework.web.bind.annotation.RequestMapping;
+import com.test.myspringboot001.domain.User;
+import com.test.myspringboot001.service.UserService;
+
+@Controller  //控制层
+@RequestMapping("/user")
+public class HelloController {
+	@Autowired
+	UserService userService; //调用Service层的UserService接口
+
+	@RequestMapping("/hello")
+	public String index() {
+		return "Hello";
+	}
+
+	@RequestMapping("/selectUser")
+	public String selectUser(User user) {  //实现功能与UserServiceImp的实现相同
+		List<User> users = userService.selectUser(user);
+
+		return "Hello";//返回到Hello.jsp页面
+	}
+
+	@RequestMapping("/insertUser")
+	public String insertUser(User user) {
+		userService.insertUser(user);
+
+		return "Hello";//返回到Hello.jsp页面
+	}
+}
+```
 
 # 拦截器的写法
 
