--- a/（1）/数据安全性*.md
+++ b/（1）/数据安全性*.md
@@ -1,3 +1,17 @@
+# 用户数据安全性
+1、HTTPS注册页
+
+2、公钥加密私钥解密（支付宝h5页面的支付密码加密）
+
+3、用户密码salt防止破解（CSDN，网易邮箱事件）
+
+4、token有效期
+
+5、添加验证码机制，防止爆破和批量注册
+
+6、单一平台的单点登陆，登陆IP异常检测
+
+7、用户状态的权限判断
 ```java
 import com.nowcoder.dao.LoginTicketDAO;
 import com.nowcoder.dao.UserDAO;
