--- a/（1）/数据安全性*.md
+++ b/（1）/数据安全性*.md
@@ -124,6 +124,51 @@ public class UserService {
         loginTicketDAO.updateStatus(ticket, 1);
     }
 }
+
+
+import com.nowcoder.model.LoginTicket;
+import org.apache.ibatis.annotations.*;
+@Mapper
+public interface LoginTicketDAO {
+    String TABLE_NAME = "login_ticket";
+    String INSERT_FIELDS = " user_id, expired, status, ticket ";
+    String SELECT_FIELDS = " id, " + INSERT_FIELDS;
+
+    @Insert({"insert into ", TABLE_NAME, "(", INSERT_FIELDS,
+        ") values (#{userId},#{expired},#{status},#{ticket})"})
+    int addTicket(LoginTicket ticket);
+
+    @Select({"select ", SELECT_FIELDS, " from ", TABLE_NAME, " where ticket=#{ticket}"})
+    LoginTicket selectByTicket(String ticket);
+
+    @Update({"update ", TABLE_NAME, " set status=#{status} where ticket=#{ticket}"})
+    void updateStatus(@Param("ticket") String ticket, @Param("status") int status);
+}
+
+import com.nowcoder.model.User;
+import org.apache.ibatis.annotations.*;
+@Mapper
+public interface UserDAO {
+    String TABLE_NAME = "user";
+    String INSET_FIELDS = " name, password, salt, head_url ";
+    String SELECT_FIELDS = " id, name, password, salt, head_url";
+
+    @Insert({"insert into ", TABLE_NAME, "(", INSET_FIELDS,
+            ") values (#{name},#{password},#{salt},#{headUrl})"})
+    int addUser(User user);
+
+    @Select({"select ", SELECT_FIELDS, " from ", TABLE_NAME, " where id=#{id}"})
+    User selectById(int id);
+
+    @Select({"select ", SELECT_FIELDS, " from ", TABLE_NAME, " where name=#{name}"})
+    User selectByName(String name);
+
+    @Update({"update ", TABLE_NAME, " set password=#{password} where id=#{id}"})
+    void updatePassword(User user);
+
+    @Delete({"delete from ", TABLE_NAME, " where id=#{id}"})
+    void deleteById(int id);
+}
 ```
 token（Ticket）
 ```java
@@ -234,5 +279,46 @@ public class LoginController {
         return "redirect:/";
     }
 
+}
+```
+```java
+import com.alibaba.fastjson.JSONObject;
+import com.nowcoder.util.JedisAdapter;
+import com.nowcoder.util.RedisKeyUtil;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
+import java.util.concurrent.ArrayBlockingQueue;
+import java.util.concurrent.BlockingQueue;
+
+@Service
+public class EventProducer {
+    @Autowired
+    JedisAdapter jedisAdapter;
+
+    public boolean fireEvent(EventModel eventModel) {
+        try {
+            String json = JSONObject.toJSONString(eventModel);
+            String key = RedisKeyUtil.getEventQueueKey();
+            jedisAdapter.lpush(key, json);
+            return true;
+        } catch (Exception e) {
+            return false;
+        }
+    }
+}
+
+
+public enum EventType {
+    LIKE(0),
+    COMMENT(1),
+    LOGIN(2),
+    MAIL(3),
+    FOLLOW(4),
+    UNFOLLOW(5),
+    ADD_QUESTION(6);
+
+    private int value;
+    EventType(int value) { this.value = value; }
+    public int getValue() { return value; }
 }
 ```
