--- a/（1）/日志.md
+++ b/（1）/日志.md
@@ -28,12 +28,13 @@ public class LogAspect {
         logger.info("after method" + new Date());
     }
 }
-#### 某类的第一行，是以下程序模板
+
+// 某类的第一行，是以下程序模板
 private static final Logger logger = LoggerFactory.getLogger(某类.class);
 
 
 
-#### 异常日志
+//异常日志
 import java.text.SimpleDateFormat;
 import java.util.Date;
 
