--- a/（1）/日志.md
+++ b/（1）/日志.md
@@ -1,3 +1,4 @@
+```java
 import org.aspectj.lang.JoinPoint;
 import org.aspectj.lang.annotation.After;
 import org.aspectj.lang.annotation.Aspect;
@@ -28,13 +29,13 @@ public class LogAspect {
         logger.info("after method" + new Date());
     }
 }
-
-// 某类的第一行，是以下程序模板
+```
+#### 某类的第一行，是以下程序模板
+```java
 private static final Logger logger = LoggerFactory.getLogger(某类.class);
-
-
-
-//异常日志
+```
+#### 异常日志
+```java
 import java.text.SimpleDateFormat;
 import java.util.Date;
 
@@ -92,3 +93,4 @@ public class ExceptionLogger {
 	}
 
 }
+```
