--- a/（1）/日志.md
+++ b/（1）/日志.md
@@ -30,7 +30,7 @@ public class LogAspect {
     }
 }
 ```
-#### 某类的第一行，是以下程序模板
+#### 某类的第一行，是以下程序模板(思考：哪些层和哪些功能的类需要记录日志？控制层)
 ```java
 private static final Logger logger = LoggerFactory.getLogger(某类.class);
 ```
