--- a/（2）/实体类的写法.md
+++ b/（2）/实体类的写法.md
@@ -1,9 +1,15 @@
 # 注意的一些点
 1.属性的必须是私有的
 
-2.属性的数据类型一定正确的书写
+2.属性的数据类型一定正确的书写(重点）
+
 int类型在实体类中是Integer
-datetime类型是Timestamp(导入java.sql.Timestamp)
+
+varchar类型是String/Double/String
+
+char类型是char/String
+
+datetime类型是Timestamp(导入java.sql.Timestamp)/Date
 
 3.getter和setter方法尽量自动生成
 ```java
