--- a/（2）/实体类的写法.md
+++ b/（2）/实体类的写法.md
@@ -11,9 +11,12 @@ char类型是char/String
 
 datetime类型是Timestamp(导入java.sql.Timestamp)/Date
 
-3.getter和setter方法尽量自动生成
+3.关联的一些属性（重点）
+
+4.getter和setter方法尽量自动生成
 ```java
 import java.sql.Timestamp;
+import java.util.List;
 
 public class Adamin {
     private Integer adamin_id;//属性的必须是私有的；
@@ -23,6 +26,30 @@ public class Adamin {
     private String telephone;
     private String eamil;
     private Timestamp enrolldate;
+    
+    private List<Role> roles;//角色列表，既然返回的是列表就是一个List，返回的类型是角色（Role）
+    private List<Integer> roleIds;//角色ID列表，返回的是列表就是一个List，返回的是ID（而ID是数字即为Integer）
+    
+    public List<Role> getRoles() {
+        return roles;
+    }
+
+    public void setRoles(List<Role> roles) {
+        this.roles = roles;
+    }
+
+    public List<Integer> getRoleIds() {
+        return roleIds;
+    }
+
+    public void setRoleIds(List<Integer> roleIds) {
+        this.roleIds = roleIds;
+    }
+    
+    
+    
+    
+    
     
     //getter和setter方法尽量自动生成
     public Integer getAdamin_id() {
