--- a/（2）/业务逻辑/5.md
+++ b/（2）/业务逻辑/5.md
@@ -1,14 +1,14 @@
 # 完成一个功能：
-##### 首先是数据库的设计
+#### 首先是数据库的设计
 
-##### 实体类entity，定义对象的属性（可以参照数据库中表的字段来设置）
+#### 实体类entity，定义对象的属性（可以参照数据库中表的字段来设置）
 
-##### 写Mapper.xml（Mybatis），其中定义你的功能，对应要对数据库进行的那些操作，比如 insert、selectAll、selectByKey、delete、update等
+#### 写Mapper.xml（Mybatis），其中定义你的功能，对应要对数据库进行的那些操作，比如 insert、selectAll、selectByKey、delete、update等
 
-##### 写Mapper.java，将Mapper.xml中的操作按照id映射成Java函数
+#### 写Mapper.java，将Mapper.xml中的操作按照id映射成Java函数
 
-##### 写Service.java，为控制层提供服务，接受控制层的参数，完成相应的功能，并返回给控制层
+#### 写Service.java，为控制层提供服务，接受控制层的参数，完成相应的功能，并返回给控制层
 
-##### 写Controller.java，连接页面请求和服务层，获取页面请求的参数，通过自动装配，映射不同的URL到相应的处理函数，并获取参数，对参数进行处理，之后传给服务层。
+#### 写Controller.java，连接页面请求和服务层，获取页面请求的参数，通过自动装配，映射不同的URL到相应的处理函数，并获取参数，对参数进行处理，之后传给服务层。
 
-##### 写JSP页面调用，请求哪些参数，需要获取什么数据。
+#### 写JSP页面调用，请求哪些参数，需要获取什么数据。
