--- a/（2）/业务逻辑/5.md
+++ b/（2）/业务逻辑/5.md
@@ -12,3 +12,30 @@
 #### 写Controller.java，连接页面请求和服务层，获取页面请求的参数，通过自动装配，映射不同的URL到相应的处理函数，并获取参数，对参数进行处理，之后传给服务层。
 
 #### 写JSP页面调用，请求哪些参数，需要获取什么数据。
+```java
+//注意：dao接口和Mappper.xml文件（可以合并写成带注解的dao接口）
+import com.model.User;
+import org.apache.ibatis.annotations.*;
+@Mapper
+public interface UserDAO {
+    String TABLE_NAME = "user";
+    String INSET_FIELDS = " name, password, salt, head_url ";
+    String SELECT_FIELDS = " id, name, password, salt, head_url";
+
+    @Insert({"insert into ", TABLE_NAME, "(", INSET_FIELDS,
+            ") values (#{name},#{password},#{salt},#{headUrl})"})
+    int addUser(User user);
+
+    @Select({"select ", SELECT_FIELDS, " from ", TABLE_NAME, " where id=#{id}"})
+    User selectById(int id);
+
+    @Select({"select ", SELECT_FIELDS, " from ", TABLE_NAME, " where name=#{name}"})
+    User selectByName(String name);
+
+    @Update({"update ", TABLE_NAME, " set password=#{password} where id=#{id}"})
+    void updatePassword(User user);
+
+    @Delete({"delete from ", TABLE_NAME, " where id=#{id}"})
+    void deleteById(int id);
+}
+```
